--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
     "xss-clean": "^0.1.1"
+  },
+  "devDependencies": {
+    "cypress": "^10.6.0"
   }
 }
