--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Joshua Alexander",
   "scripts": {
     "dev": "nodemon --experimental-modules --es-module-specifier-resolution=node server",
-    "doc": "docgen build -i pulse.postman_collection.json -o ./public/index.html",
+    "doc": "docgen build -i mooveit-api.postman_collection.json -o ./public/index.html",
     "git": "yarn doc && git commit -am 'Updated api documentation' && git push origin main",
     "start": "NODE_ENV=production node server",
     "deploy": "yarn git && git push heroku main"
