--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-mongo-sanitize": "^2.2.0",
@@ -27,6 +28,6 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    // "cypress": "^10.6.0"
+    "cypress": "^10.6.0"
   }
 }
