--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "NODE_ENV=production node server"
   },
   "dependencies": {
+    "aws-sdk": "^2.1225.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
