--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.5.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "sib-api-v3-sdk": "^8.4.2",
     "xss-clean": "^0.1.1"
   }
