--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^2.10.0",
+    "otp-generator": "^4.0.0",
     "sib-api-v3-sdk": "^8.4.2",
     "xss-clean": "^0.1.1"
   }
