--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer-s3": "^2.10.0",
     "otp-generator": "^4.0.0",
     "sib-api-v3-sdk": "^8.4.2",
+    "stripe": "^11.8.0",
     "xss-clean": "^0.1.1"
   }
 }
