--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "NODE_ENV=production node server"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.46.0",
     "aws-sdk": "^2.1225.0",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -29,7 +30,7 @@
     "multer-s3": "^2.10.0",
     "otp-generator": "^4.0.0",
     "sib-api-v3-sdk": "^8.4.2",
-    "stripe": "^11.8.0",
+    "stripe": "^11.11.0",
     "xss-clean": "^0.1.1"
   }
 }
