--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "otp-generator": "^4.0.0",
     "sib-api-v3-sdk": "^8.4.2",
     "stripe": "^11.11.0",
+    "uuid": "^9.0.0",
     "xss-clean": "^0.1.1"
   }
 }
